fixed the alignment on my slide buttons

--- a/style.css
+++ b/style.css
@@ -216,7 +216,7 @@ footer {
   flex-direction: row;
   color: #fff;
   background-color: #333;
-  font-size: 40px;
+  font-size: 31px;
   border-radius: 50%;
   position: absolute;
   width: 50px;
